--- a/wiki/Whats_New_081013.wiki
+++ b/wiki/Whats_New_081013.wiki
@@ -1,4 +1,4 @@
-#summary CQ/XML Interface - What's New - Release: 2008-10-13
+#summary What's New - Release: 2008-10-13
 #labels Featured
 
 = Introduction =
